--- a/styles/pages/_architecture_page.scss
+++ b/styles/pages/_architecture_page.scss
@@ -12,6 +12,7 @@
     display: flex;
     padding-left: 0;
     color: #84807d;
+    margin-bottom: 25px;
 
     li {
       border-right: 1px solid #ccc;
@@ -30,6 +31,15 @@
     img {
       max-width: 100%;
     }
+
+    ul {
+      margin-left: 15px;
+    }
+
+    p {
+      display: flex;
+      justify-content: center;
+    }
   }
 
   .commitment {
@@ -45,6 +55,7 @@
 
     ol {
       margin-left: 30px;
+      margin-bottom: 20px;
     }
   }
 }
